# hoj_teaching

./: striations_notes.md
.devcontainer/: devcontainer.json
AY_2425/BC_Calc/Fourier/: Makefile  README.md  fourier_p1.md  fourier_p2.md  notes.tex
AY_2425/algebra_1/piecewise_functions/: .gitignore  Makefile  README.md  create_handout.py  guided_notes.tex  handout.tex  intervals.py  latex_writer.py  piecewise_functions.py
AY_2425/algebra_1/piecewise_functions/bellringer/: Makefile  main.tex  part1.tex  part2.tex
AY_2526/composite_shapes_activity/: streamlit_app.py
AY_2526/composite_shapes_activity/fixtures/: answer_key.csv  directions.md
AY_2526/matching_game/: create_handout.py  proportional_relationships.py
AY_2526/prng_demo/: README.md  app.py  pyproject.toml
email/: .gitignore  README.md  app.py  crypt.py  database.py  process_email_files.py  pyproject.toml  students.json  utility.py
email/fixtures/: parentEmails.csv  studentEmails.txt  studentGender.csv
seating_chart/: .gitignore  README.md  agenda.json  announcements.json  default_content.json  default_tables.json  default_tables_size1.json  default_tables_size2.json  default_tables_size4.json  do_now.json  hoj_slides.py  main.tf  make_slides.py  output.tf  period_12.csv  period_910.csv  pyproject.toml  rosters.json  startup.sh  streamlit.py  terraform.tvars  variables.tf
seating_chart/rosters/: period_12.csv  period_45.csv  period_78.csv  period_910.csv
seating_chart/seating_chart/: seats.py  slide.py
